--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,6 +86,7 @@ base16ct = { version = "0.2", features = ["alloc"] }
 bytesize = { version = "1.2.0", features = ["serde"] }
 bytesize-serde = "0.2.1"
 percent-encoding = "2.3.1"
+tempfile = "3.12.0"
 
 [profile.release]
 debug = true
